--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -5,7 +5,6 @@
 body {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    color: #5a5a5a;
 }
 
 
@@ -14,7 +13,10 @@ body {
 
 /* Carousel base class */
 .carousel {
-    margin-bottom: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: radial-gradient(#711061, #e991da);
+    border-radius: 2em;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -24,7 +26,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-    height: 32rem;
+    height: 20rem;
 }
 .carousel-item > img {
     position: absolute;
