--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,140 +1,141 @@
 <!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="La boutique de tes rèves">
-    <meta name="generator" content="Jekyll v4.1.1">
-    <title>{% block title%} Make-up Plum {% endblock %}</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="La boutique de tes rèves">
+        <meta name="generator" content="Jekyll v4.1.1">
+        <title>{% block title%} Make-up Plum {% endblock %}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{ asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
-    <link rel="stylesheet" href="{{'assets/css/ecom.css'}}">
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
+        <!-- Bootstrap core CSS -->
+        <link href="{{ asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
+        <link rel="stylesheet" href="{{'assets/css/ecom.css'}}">
 
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
             }
-        }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="{{ asset('assets/css/carousel.css')}}" rel="stylesheet">
-</head>
-<body>
-<header>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #FFC0CB;">
-        <a class="navbar-brand" href="{{ path("home")}}">Make-up Plum</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ path ('products')}}">Nos produits</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ path ('contact')}}">Contact</a>
-                </li>
-            </ul>
-            <div class="navbar-item-custom">
-                {% if is_granted('ROLE_ADMIN') %}
-                    <a href="{{ path('admin') }}">Administration</a> |
-                {% endif %}
-                {% if app.user %}
-                    <a href="{{ path('account') }}">Mon Compte <Small>({{ app.user.firstname}})</Small></a> | <a href="{{ path('app_logout') }}">Se déconnecter</a>
-                {% else %}
-                    <a href="{{ path('app_login') }}">Connexion</a> | <a href="{{ path('register') }}">Inscription</a>
-                {% endif %}
-            </div>
-            <a href=" {{ path("cart") }}"><img src="{{ asset('assets/img/shopping-cart.png') }}" alt="mon_panier" class="cart-icon"></a>
-        </div>
-    </nav>
-</header>
 
-<main role="main">
-{% block body %}
-    {% if block('carousel') is defined %}
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#ffc0cb99"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h1>Le concept de notre boutique</h1>
-                        <p>Make-up plum est une boutique en ligne de maquillages éthiques et biologiques. Rejoignez le mouvement !</p>
-                        <p><a class="btn btn-lg btn-outline-light" href="{{ path('register') }}" role="button">S'inscrire</a></p>
+            @media (min-width: 900px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
+        </style>
+        <!-- Custom styles for this template -->
+        <link href="{{ asset('assets/css/carousel.css')}}" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color:#ffc0cb;">
+                <a class="navbar-brand" href="{{ path("home")}}">Make-up Plum</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path ('products')}}">Nos produits</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path ('contact')}}">Contact</a>
+                        </li>
+                    </ul>
+                    <div class="navbar-item-custom">
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ path('admin') }}">Administration</a> |
+                        {% endif %}
+                        {% if app.user %}
+                            <a href="{{ path('account') }}">Mon Compte <Small>({{ app.user.firstname}})</Small></a> | <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                        {% else %}
+                            <a href="{{ path('app_login') }}">Connexion</a> | <a href="{{ path('register') }}">Inscription</a>
+                        {% endif %}
+                    </div>
+                    <a href=" {{ path("cart") }}"><img src="{{ asset('assets/img/shopping-cart.png') }}" alt="mon_panier" class="cart-icon"></a>
+                </div>
+            </nav>
+        </header>
+
+        <main role="main">
+        {% block body %}
+            {% if block('carousel') is defined %}
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#ffc0cb99"/></svg>
+                        <div class="container">
+                            <div class="carousel-caption text-left">
+                                <h1>Le concept de notre boutique</h1>
+                                <p>Make-up plum est une boutique en ligne de maquillages éthiques et biologiques. Rejoignez le mouvement !</p>
+                                <p><a class="btn btn-lg btn-outline-light" href="{{ path('register') }}" role="button">S'inscrire</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#ffc0cb99"/></svg>
+                        <div class="container">
+                            <div class="carousel-caption">
+                                <h1>Nos engagements</h1>
+                                <p>Nous nous engageons à financer la recherche pour la protection de l'environnement et tout particulièrement la dépollution des eaux.</p>
+                                <p><a class="btn btn-lg btn-outline-light" href="#" role="button">Qui sommes-nous</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#ffc0cb99"/></svg>
+                        <div class="container">
+                            <div class="carousel-caption text-right">
+                                <h1>Nos produits</h1>
+                                <p>Nos produits sont éthiques et biologique, donc en plus d'être bon pour vous, ils sont bons pour la nature !</p>
+                                <p><a class="btn btn-lg btn-outline-light" href="{{ path ('products')}}" role="button">Nos produits</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#ffc0cb99"/></svg>
-                <div class="container">
-                    <div class="carousel-caption">
-                        <h1>Nos engagements</h1>
-                        <p>Nous nous engageons à financer la recherche pour la protection de l'environnement et tout particulièrement la dépollution des eaux.</p>
-                        <p><a class="btn btn-lg btn-outline-light" href="#" role="button">Qui sommes-nous</a></p>
-                    </div>
-                </div>
+            {% endif %}
+
+            <!-- Marketing messaging and featurettes
+            ================================================== -->
+            <!-- Wrap the rest of the page in another container to center all the content. -->
+
+            <div class="container marketing {% if block('carousel') is not defined %}mt-5 col-md-12{% endif %}">
+
+                {% block content %}
+
+                {% endblock %}
+
             </div>
-            <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#ffc0cb99"/></svg>
-                <div class="container">
-                    <div class="carousel-caption text-right">
-                        <h1>Nos produits</h1>
-                        <p>Nos produits sont éthiques et biologique, donc en plus d'être bon pour vous, ils sont bons pour la nature !</p>
-                        <p><a class="btn btn-lg btn-outline-light" href="{{ path ('products')}}" role="button">Nos produits</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    {% endif %}
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing {% if block('carousel') is not defined %}mt-5{% endif %}">
-
-        {% block content %}
-
+            {% block footer %}
+                <!-- FOOTER -->
+                <footer class="footer-custom footer mt-auto py-3">
+                    <p>
+                        &copy; 2022 Make-up Plum <br/> 
+                        <small> Make-up Plum, la beauté à prix léger comme une plume </small>
+                    </p> 
+                </footer>
+            {% endblock %}
         {% endblock %}
-
-    </div>
-    {% block footer %}
-        <!-- FOOTER -->
-        <footer class="footer-custom footer mt-auto py-3">
-            <p>
-                &copy; 2022 Make-up Plum <br/> 
-                <small> Make-up Plum, la beauté à prix léger comme une plume </small>
-            </p> 
-        </footer>
-    {% endblock %}
-{% endblock %}
-</main>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="{{ asset('assets/js/bootstrap.bundle.js')}}"></script>
-</body>
+        </main>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="{{ asset('assets/js/bootstrap.bundle.js')}}"></script>
+    </body>
 </html>
