add pictures home page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -111,6 +111,17 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+            <div class="row">
+                <div class="card-group">
+                    <div class="card ">
+                        <img src="{{ asset('assets/img/mouth-g588ebd9c6_1920.jpg') }}" class="img-fluid rounded-start" alt="Image 1 non contractuelle">
+                    </div>
+                    <div class="card">
+                        <img src="{{ asset('assets/img/cosmetics-g02a41a135_1920.jpg') }}" class="img-fluid rounded-start" alt="Image 2 non contractuelle">
+                    </div>
+
+                </div>
+            </div>
             {% endif %}
 
             <!-- Marketing messaging and featurettes
