--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Se connecter _ Ecom{% endblock %}
+{% block title %}Se connecter _ Make-up Plum{% endblock %}
 
 {% block content %}
     <div class="block-small">
